<resources>
    <string name="app_name">KaamWala</string>
    <string name="logo_image">Logo Image</string>
    <string name="service_name">Service Name</string>
    <string name="nav_drawer_open">Open Navigation Drawer</string>
    <string name="nav_drawer_close">Close Navigation Drawer</string>
    <string name="my_info">My Info</string>
    <string name="others">Others</string>
    <string name="profile_image">Profile Image</string>
    <string name="your_name">Your Name</string>
    <string name="abous_us">Abous Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="need_help">Need Help?</string>
    <string name="my_services">My Services</string>
    <string name="services">Services</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="verify_your_phone_number">Verify Your Phone Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="sending_otp">Sending OTP...</string>
    <string name="resend">Resend</string>
    <string name="next">Next</string>
    <string name="verify">Verify</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="enter_your_information">Enter Your Information</string>
    <string name="checking">Checking . . .</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="dummy_phone_number">+923230496310</string>
    <string name="your_phone_number">Your Phone Number:</string>
    <string name="your_address">Your Address:</string>
    <string name="timing">Timing</string>
    <string name="immediately">Immediately</string>
    <string name="select_time">Select Time</string>
    <string name="later">Later</string>
    <string name="send_request">Send Request</string>
    <string name="name">Name</string>
    <string name="my_profile">My Profile</string>
    <string name="status">Status</string>
    <string name="add_new_phone_number">Add New Phone Number</string>
    <string name="add_new_address">Add New Address</string>
    <string name="describe_about_your_problem">Describe about your problem...</string>
    <string name="will_be_announce_soon">Will be Announce Soon</string>
    <string name="dummy_email">customer.kaamwala@gmail.com</string>
    <string name="search">Search</string>
    <string name="search_on_map">Search On Map</string>
    <string name="google_maps_API_key">AIzaSyAyTFPxt7NzY-g7L-vh-ugEr4PQdm4VDeQ</string>
    <string name="select_location">Select Location</string>
</resources>