<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/my_info">
        <menu>
            <item
                android:id="@+id/nav_my_profile"
                android:icon="@drawable/ic_person"
                android:title="@string/my_profile" />
            <item
                android:id="@+id/nav_my_services"
                android:icon="@drawable/ic_menu_service"
                android:title="@string/my_services" />

        </menu>
    </item>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_menu_contact"
                android:title="@string/contact_us" />
        </menu>
    </item>

</menu>
