<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/my_service_card"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:layout_margin="5dp"
    android:background="@drawable/layout_border"
    app:cardCornerRadius="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TextView
            android:id="@+id/service_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/service_name"
            android:layout_marginTop="10dp"
            android:text="@string/name"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@+id/status"
            android:text="@string/address"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/address"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:text="@string/dummy_phone_number"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/service_name"
            android:layout_alignParentEnd="true"
            android:text="@string/timing"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:gravity="end"
            android:text="@string/status"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="16sp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>