<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RequestServiceActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_shadow_end_colour"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_border"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp" />

            <RadioGroup
                android:id="@+id/phoneRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <RadioButton

                    android:id="@+id/phoneRadioText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/dummy_phone_number"
                    android:textSize="15sp" />
            </RadioGroup>

            <Button
                android:id="@+id/newPhone"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorAccent"
                android:text="@string/add_new_phone_number"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/layout_border"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp" />

            <RadioGroup
                android:id="@+id/addressRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:id="@+id/addressRadioText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/address"
                    android:textSize="15sp" />
            </RadioGroup>

            <Button
                android:id="@+id/newAddress"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorAccent"
                android:text="@string/add_new_address"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/layout_border"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/timing"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp" />

            <RadioGroup
                android:id="@+id/timeRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:id="@+id/immediate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/immediately"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/later"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/later"
                    android:textSize="15sp" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/select_time"
                    android:layout_width="110dp"
                    android:layout_height="35dp"
                    android:background="@color/colorAccent"
                    android:text="@string/select_time"
                    android:textColor="@android:color/white"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/selected_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textSize="18sp"
                    android:visibility="gone" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/layout_border"
            android:paddingStart="5dp"
            android:paddingEnd="5dp">

            <EditText
                android:isScrollContainer="true"
                android:id="@+id/descriptionBox"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:backgroundTint="@android:color/transparent"
                android:gravity="top"
                android:hint="@string/describe_about_your_problem" />
        </LinearLayout>

        <Button
            android:id="@+id/requestButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/send_request"
            android:textColor="@android:color/white" />

    </LinearLayout>
</ScrollView>