<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageView
        android:id="@+id/contact"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/logo_image"
        app:srcCompat="@drawable/ic_address" />

    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/contact"
        android:layout_alignBottom="@+id/contact"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/contact"
        android:gravity="center_vertical"
        android:text="@string/will_be_announce_soon"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_below="@id/contact"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/logo_image"
        app:srcCompat="@drawable/ic_contact_phone" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView4"
        android:layout_alignBottom="@+id/imageView4"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/imageView4"
        android:gravity="center_vertical"
        android:text="@string/dummy_phone_number"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_below="@id/phone"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/logo_image"
        app:srcCompat="@drawable/ic_contact_email" />

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView5"
        android:layout_alignBottom="@+id/imageView5"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/imageView5"
        android:gravity="center_vertical"
        android:text="@string/dummy_email"
        android:textSize="16sp" />


</RelativeLayout>
